using Intelibill.Domain.Common;
using Intelibill.Domain.Enums;

namespace Intelibill.Domain.Entities;

public sealed class Shop : BaseEntity
{
    public string Name { get; private set; } = string.Empty;
    public string Address { get; private set; } = string.Empty;
    public string City { get; private set; } = string.Empty;
    public string State { get; private set; } = string.Empty;
    public string Pincode { get; private set; } = string.Empty;
    public string? ContactPerson { get; private set; }
    public string? MobileNumber { get; private set; }
    public string? GstNumber { get; private set; }
    public string? BankName { get; private set; }
    public string? BankAccountNumber { get; private set; }
    public BankAccountType? BankAccountType { get; private set; }
    public string? IfscCode { get; private set; }
    public string? AccountHolderName { get; private set; }

    private readonly List<ShopMembership> _memberships = [];
    private readonly List<BankAccount> _bankAccounts = [];
    public IReadOnlyList<ShopMembership> Memberships => _memberships.AsReadOnly();
    public IReadOnlyList<BankAccount> BankAccounts => _bankAccounts.AsReadOnly();

    private Shop() { }

    public static Shop Create(
        string name,
        string address,
        string city,
        string state,
        string pincode,
        string? contactPerson,
        string? mobileNumber,
        string? gstNumber)
    {
        return new Shop
        {
            Name = name.Trim(),
            Address = address.Trim(),
            City = city.Trim(),
            State = state.Trim(),
            Pincode = pincode.Trim(),
            ContactPerson = NormalizeOptional(contactPerson),
            MobileNumber = NormalizeOptional(mobileNumber),
            GstNumber = NormalizeOptional(gstNumber),
        };
    }

    public void Rename(string name)
    {
        Name = name.Trim();
    }

    public void UpdateDetails(
        string name,
        string address,
        string city,
        string state,
        string pincode,
        string? contactPerson,
        string? mobileNumber,
        string? gstNumber)
    {
        Name = name.Trim();
        Address = address.Trim();
        City = city.Trim();
        State = state.Trim();
        Pincode = pincode.Trim();
        ContactPerson = NormalizeOptional(contactPerson);
        MobileNumber = NormalizeOptional(mobileNumber);
        GstNumber = NormalizeOptional(gstNumber);
    }

    public void UpdateBankDetails(
        string? bankName,
        string? bankAccountNumber,
        BankAccountType? bankAccountType,
        string? ifscCode,
        string? accountHolderName)
    {
        BankName = NormalizeOptional(bankName);
        BankAccountNumber = NormalizeOptional(bankAccountNumber);
        BankAccountType = bankAccountType;
        IfscCode = NormalizeOptional(ifscCode);
        AccountHolderName = NormalizeOptional(accountHolderName);
    }

    public void AddBankAccount(BankAccount bankAccount)
    {
        _bankAccounts.Add(bankAccount);
    }

    public void AddMembership(ShopMembership membership)
    {
        membership.AttachShop(this);
        _memberships.Add(membership);
    }

    private static string? NormalizeOptional(string? value)
    {
        if (string.IsNullOrWhiteSpace(value))
            return null;

        return value.Trim();
    }
}