erDiagram
    USERS {
        uuid id PK
        string email UK
        string phone_number UK
        string first_name
        string last_name
        string password_hash
        string language
        bool is_email_verified
        bool is_login_enabled
        datetime created_at
        datetime updated_at
    }

    SHOPS {
        uuid id PK
        string name
        string address
        string city
        string state
        string pincode
        string contact_person
        string mobile_number
        string gst_number
        datetime created_at
        datetime updated_at
    }

    SHOP_MEMBERSHIPS {
        uuid id PK
        uuid user_id FK
        uuid shop_id FK
        string role
        bool is_default
        datetime last_used_at
        datetime created_at
        datetime updated_at
    }

    USER_EXTERNAL_LOGINS {
        uuid id PK
        uuid user_id FK
        int provider
        string provider_key
        string provider_email
        datetime created_at
        datetime updated_at
    }

    REFRESH_TOKENS {
        uuid id PK
        uuid user_id FK
        string token UK
        datetime expires_at
        bool is_revoked
        datetime revoked_at
        datetime created_at
        datetime updated_at
    }

    PASSWORD_RESET_TOKENS {
        uuid id PK
        uuid user_id FK
        string token_hash
        datetime expires_at
        bool is_used
        datetime created_at
        datetime updated_at
    }

    BANK_ACCOUNTS {
        uuid id PK
        uuid shop_id FK
        string bank_name
        string account_number
        string account_type
        string ifsc_code
        string account_holder_name
        datetime created_at
        datetime updated_at
    }

    SUPPLIERS {
        uuid id PK
        uuid owner_user_id FK
        string name
        string contact_person_name
        string contact_person_phone
        string address
        string city
        string state
        string pin
        bool is_system
        bool is_active
        bool is_preferred
        datetime created_at
        datetime updated_at
    }

    ITEMS {
        uuid id PK
        uuid shop_id FK
        string name
        string description
        string uom
        string barcode
        bool is_active
        uuid created_by
        uuid updated_by
        datetime created_at
        datetime updated_at
    }

    INVENTORY {
        uuid id PK
        uuid shop_id FK
        uuid item_id FK
        decimal quantity
        decimal reorder_level
        decimal max_level
        datetime last_updated_at
        uuid created_by
        uuid updated_by
        datetime created_at
        datetime updated_at
    }

    INVENTORY_BATCHES {
        uuid id PK
        uuid shop_id FK
        uuid item_id FK
        string batch_number
        decimal quantity
        decimal original_quantity
        decimal cost_price
        decimal mrp
        decimal sales_price
        decimal tax_rate_percent
        bool tax_included
        bool is_voided
        date expiry_date
        date manufacturing_date
        uuid supplier_id FK
        uuid created_by
        uuid updated_by
        datetime created_at
        datetime updated_at
    }

    STOCK_TRANSACTIONS {
        uuid id PK
        uuid shop_id FK
        uuid item_id FK
        uuid inventory_batch_id FK
        string transaction_type
        decimal quantity
        string reference_number
        string notes
        datetime performed_at
        uuid performed_by
        uuid created_by
        uuid updated_by
        datetime created_at
        datetime updated_at
    }

    SUPPLIER_LEDGER_ENTRIES {
        uuid id PK
        uuid shop_id FK
        uuid supplier_id FK
        uuid batch_id FK
        string entry_type
        decimal amount
        date entry_date
        string notes
        uuid created_by
        datetime created_at
        datetime updated_at
    }

    USERS ||--o{ SHOP_MEMBERSHIPS : memberships
    SHOPS ||--o{ SHOP_MEMBERSHIPS : memberships
    USERS ||--o{ USER_EXTERNAL_LOGINS : external_logins
    USERS ||--o{ REFRESH_TOKENS : refresh_tokens
    USERS ||--o{ PASSWORD_RESET_TOKENS : password_reset_tokens
    SHOPS ||--o{ BANK_ACCOUNTS : bank_accounts
    USERS ||--o{ SUPPLIERS : owned_suppliers

    SHOPS ||--o{ ITEMS : items
    SHOPS ||--o{ INVENTORY : inventory_rows
    SHOPS ||--o{ INVENTORY_BATCHES : batches
    SHOPS ||--o{ STOCK_TRANSACTIONS : stock_txns
    SHOPS ||--o{ SUPPLIER_LEDGER_ENTRIES : supplier_ledger

    ITEMS ||--|| INVENTORY : aggregate
    ITEMS ||--o{ INVENTORY_BATCHES : batches
    ITEMS ||--o{ STOCK_TRANSACTIONS : txns

    INVENTORY_BATCHES ||--o{ STOCK_TRANSACTIONS : txns
    INVENTORY_BATCHES o|--o{ SUPPLIER_LEDGER_ENTRIES : ledger_refs

    SUPPLIERS o|--o{ INVENTORY_BATCHES : optional_on_batch
    SUPPLIERS ||--o{ SUPPLIER_LEDGER_ENTRIES : ledger_entries
